--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,16 @@
     "animate.css": "^4.1.1",
     "eslint": "^8.40.0",
     "eslint-config-next": "13.4.1",
+    "i18next": "^22.5.0",
+    "i18next-browser-languagedetector": "^7.0.1",
+    "i18next-http-backend": "^2.2.1",
     "next": "13.4.1",
+    "next-i18next": "^13.2.2",
     "qs": "^6.11.2",
     "react": "18.2.0",
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.3.1",
     "sass": "^1.62.1",
     "typescript": "^5.0.4"
   },
