--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
 NEXT_STRAPI_URL_API = 'http://localhost:1337/api'
+NEXT_PUBLIC_API_URL = 'http://localhost:1337/api'
 NEXT_PUBLIC_STRAPI_URL = 'http://localhost:1337'
