--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,14 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "animate.css": "^4.1.1",
+    "classnames": "^2.3.2",
     "eslint": "^8.40.0",
     "eslint-config-next": "13.4.1",
+    "html-react-parser": "^3.0.16",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.1",
+    "isomorphic-dompurify": "^1.5.0",
     "next": "13.4.1",
     "next-i18next": "^13.2.2",
     "qs": "^6.11.2",
@@ -27,6 +30,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^12.3.1",
     "sass": "^1.62.1",
+    "swr": "^2.1.5",
     "typescript": "^5.0.4"
   },
   "devDependencies": {
