--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,5 @@
 NEXT_STRAPI_URL_API = 'http://localhost:1337/api'
 NEXT_PUBLIC_API_URL = 'http://localhost:1337/api'
 NEXT_PUBLIC_STRAPI_URL = 'http://localhost:1337'
+NEXT_PUBLIC_SITE_URL = 'http://localhost:3000'
+NEXT_PUBLIC_SITE_HOST = 'localhost:3000'
