--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-animation-on-scroll": "^5.1.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.3.1",
+    "react-lazyload": "^3.2.0",
     "sass": "^1.62.1",
     "swr": "^2.1.5",
     "typescript": "^5.0.4"
