--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {}
+  "devDependencies": {},
+  "dependencies": {
+    "@types/react-lazyload": "^3.2.0"
+  }
 }
