--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-i18n": "4.10.2",
     "@strapi/plugin-users-permissions": "4.10.2",
     "@strapi/strapi": "4.10.2",
-    "pg": "8.8.0"
+    "pg": "8.8.0",
+    "pg-connection-string": "^2.6.0"
   },
   "author": {
     "name": "A Strapi developer"
