--- a/backend/.env.production
+++ b/backend/.env.production
@@ -5,6 +5,7 @@ API_TOKEN_SALT=2pFJLiyqnhQQoXJJL2jWMw==
 ADMIN_JWT_SECRET=HmPxrPp7KlPc6qtJL/MpNA==
 TRANSFER_TOKEN_SALT=InJbqyd1lBariYcLXD7qQg==
 # Database
+DATABASE_URL=postgres://admin:Hs7n2lUmuBFgjGUj4DL8JmZvXjUndei5@dpg-chud08e7avj345cso2a0-a/cortex_strapi_1lvb
 DATABASE_CLIENT=postgres
 DATABASE_HOST=dpg-chud08e7avj345cso2a0-a
 DATABASE_PORT=5432
