--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@strapi/plugin-i18n": "4.10.2",
     "@strapi/plugin-users-permissions": "4.10.2",
     "@strapi/strapi": "4.10.2",
+    "false": "^0.0.4",
     "pg": "8.8.0",
     "pg-connection-string": "^2.6.0"
   },
