--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@types/node": "20.1.2",
     "@types/qs": "^6.9.7",
-    "@types/react": "18.2.6",
-    "@types/react-dom": "18.2.4",
+    "@types/react": "^18.2.11",
+    "@types/react-dom": "^18.2.4",
     "animate.css": "^4.1.1",
     "classnames": "^2.3.2",
     "eslint": "^8.40.0",
     "eslint-config-next": "13.4.1",
+    "formik": "^2.4.1",
     "html-react-parser": "^3.0.16",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -25,14 +26,15 @@
     "next": "13.4.1",
     "next-i18next": "^13.2.2",
     "qs": "^6.11.2",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-animation-on-scroll": "^5.1.0",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
     "react-lazyload": "^3.2.0",
     "sass": "^1.62.1",
     "swr": "^2.1.5",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.6",
