global versions update

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,18 @@
     "@types/qs": "^6.9.7",
     "@types/react": "^18.2.11",
     "@types/react-dom": "^18.2.4",
+    "@types/react-lazyload": "^3.2.2",
     "animate.css": "^4.1.1",
     "classnames": "^2.3.2",
     "eslint": "^8.40.0",
-    "eslint-config-next": "13.4.1",
+    "eslint-config-next": "^14.0.1",
     "formik": "^2.4.1",
     "html-react-parser": "^3.0.16",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.1",
     "isomorphic-dompurify": "^1.5.0",
-    "next": "13.4.1",
+    "next": "^14.0.1",
     "next-i18next": "^13.2.2",
     "qs": "^6.11.2",
     "react": "^18.2.0",
