--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "frontend": "cd frontend && yarn dev",
     "backend": "cd backend && yarn develop",
-    "dev": "concurrently --kill-others-on-fail \"yarn backend\" \"yarn frontend\""
+    "dev": "concurrently --kill-others-on-fail \"yarn backend\" \"yarn frontend\"",
+    "clear": "cd frontend && rm -rf .next && rm -rf cache"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {},
   "dependencies": {
-    "@types/react-lazyload": "^3.2.0"
+    "concurrently": "^8.2.2"
   }
 }
