--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "@strapi/strapi": "4.15.0",
     "false": "^0.0.4",
     "pg": "8.8.0",
-    "pg-connection-string": "^2.6.0"
+    "pg-connection-string": "^2.6.0",
+    "util": "^0.12.5"
   },
   "author": {
     "name": "A Strapi developer"
