--- a/docker-config/docker-compose.yml
+++ b/docker-config/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       dockerfile: ../docker-config/Dockerfile.frontend
     ports:
       - "3000:3000"
-    env_file: ./.env
+    env_file: ../frontend/.env
     environment:
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
     # volumes:
@@ -29,7 +29,7 @@ services:
     restart: unless-stopped
     ports:
       - "1337:1337"
-    env_file: ./.env
+    env_file: ../backend/.env
     environment:
       APP_KEYS: ${APP_KEYS}
       API_TOKEN_SALT: ${API_TOKEN_SALT}
@@ -55,12 +55,12 @@ services:
       - strapiDB
 
   strapiDB:
-    image: postgres:15
+    image: postgres:16
     container_name: strapiDB
     restart: unless-stopped
     ports:
-      - "5432:5432"
-    env_file: ./.env
+      - "5433:5433"
+    env_file: ../backend/.env
     environment:
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
       - POSTGRES_USER=${DATABASE_USERNAME}
