--- a/docker-config/Dockerfile.backend
+++ b/docker-config/Dockerfile.backend
@@ -3,13 +3,20 @@ FROM node:20
 # Installing libvips-dev for sharp Compatability
 # RUN apt-get update && apt-get install libvips-dev vim -y
 
-RUN mkdir -p /usr/app
-WORKDIR /usr/app
+RUN mkdir -p /app
+WORKDIR /app
 
-COPY package*.json yarn.lock ./
+COPY package*.json yarn.lock /app/
+# COPY .env /app/
 
-RUN yarn install
+# ENV PATH /app/node_modules/.bin:$PATH
 
+# Install dependencies in /app
+RUN yarn config set network-timeout 600000 -g && yarn install
+
+# Copy the rest of our Strapi folder into /app
 COPY . .
+
+EXPOSE 1337
 
 CMD ["yarn", "develop"]
