--- a/docker-config/docker-compose.yml
+++ b/docker-config/docker-compose.yml
@@ -8,16 +8,16 @@ services:
       dockerfile: ../docker-config/Dockerfile.frontend
     ports:
       - "3000:3000"
-    env_file: ../frontend/.env
+    env_file: ./.env
     environment:
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
-    # volumes:
+    volumes:
       # Required to sync file changes.
-      # - ../frontend:/usr/app
+      - ../frontend:/app
       # Required for next to do it's thing.
-      # - /usr/app/.next
+      - /app/.next
       # Required to not break node modules.
-      # - /usr/app/node_modules
+      - /app/node_modules
     networks:
       - cortex
 
@@ -29,7 +29,7 @@ services:
     restart: unless-stopped
     ports:
       - "1337:1337"
-    env_file: ../backend/.env
+    env_file: .env
     environment:
       APP_KEYS: ${APP_KEYS}
       API_TOKEN_SALT: ${API_TOKEN_SALT}
@@ -42,38 +42,39 @@ services:
       DATABASE_PORT: ${DATABASE_PORT}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
       JWT_SECRET: ${JWT_SECRET}
-    links:
-      - strapiDB:strapiDB
-    # volumes:
+    #links:
+    #  - strapiDB:strapiDB
+    volumes:
       # Required to sync file changes.
-      # - ../backend:/usr/app
+      - ../backend:/app
       # Required to not break node modules.
-      # - /usr/app/node_modules
+      - /app/node_modules
+      - ./.env:/app/.env
     networks:
       - cortex
-    depends_on:
-      - strapiDB
+    #depends_on:
+    #  - strapiDB
 
-  strapiDB:
-    image: postgres:16
-    container_name: strapiDB
-    restart: unless-stopped
-    ports:
-      - "5433:5433"
-    env_file: ../backend/.env
-    environment:
-      - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
-      - POSTGRES_USER=${DATABASE_USERNAME}
-      - POSTGRES_DB=${DATABASE_NAME}
-    # volumes:
-      # - postgres-data:/var/lib/postgresql/data
-    networks:
-      - cortex
+  #strapiDB:
+  #  image: postgres:16
+  #  container_name: strapiDB
+  #  restart: unless-stopped
+  #  ports:
+  #    - "5433:5433"
+  #  env_file: .env
+  #  environment:
+  #    POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+  #    POSTGRES_USER: ${DATABASE_USERNAME}
+  #    POSTGRES_DB: ${DATABASE_NAME}
+  #  volumes:
+  #  - postgres-data:/var/lib/postgresql/data
+  #  networks:
+  #    - cortex
 
 networks:
   cortex:
     name: Cortex
     driver: bridge
 
-# volumes:
+#volumes:
 #  postgres-data:
