--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,11 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6"
+    "@typescript-eslint/parser": "^5.59.6",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "prettier": "^3.0.3"
   }
 }
