--- a/frontend/.eslintrc.json
+++ b/frontend/.eslintrc.json
@@ -10,13 +10,7 @@
         "plugin:@next/next/recommended",
         "prettier"
     ],
-    "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
+    "parserOptions": { "project": ["./tsconfig.json"] },
     "plugins": ["react", "prettier"],
     "rules": {
         "prettier/prettier": [
@@ -28,6 +22,7 @@
         "no-undef": "off",
         "import/no-unresolved": "off",
         "import/extensions": "off",
-        "jsx-a11y/anchor-is-valid": "off"
+        "jsx-a11y/anchor-is-valid": "off",
+        "no-console": "error"
     }
 }
