--- a/frontend_new/package.json
+++ b/frontend_new/package.json
@@ -13,7 +13,8 @@
     "negotiator": "^0.6.3",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
