--- a/frontend_new/tsconfig.json
+++ b/frontend_new/tsconfig.json
@@ -18,10 +18,15 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./*"],
+      "@/src/*": ["src/*"],
+      "@/app/*": ["src/app/[lang]/*"],
+      "@/styles/*": ["src/app/[lang]/assets/styles/*"],
+      "@/components/*": ["src/app/[lang]/components/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "**/*.css", "**/*.scss"],
   "exclude": ["node_modules"]
 }
