--- a/frontend_new/package.json
+++ b/frontend_new/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.1",
+    "@types/qs": "^6.9.10",
     "negotiator": "^0.6.3",
     "next": "14.0.2",
+    "qs": "^6.11.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "sass": "^1.69.5"
   },
   "devDependencies": {
