--- a/frontend_new/tsconfig.json
+++ b/frontend_new/tsconfig.json
@@ -23,8 +23,8 @@
       "@/*": ["./*"],
       "@/src/*": ["src/*"],
       "@/app/*": ["src/app/[lang]/*"],
-      "@/styles/*": ["src/app/[lang]/assets/styles/*"],
-      "@/components/*": ["src/app/[lang]/components/*"]
+      "@/styles/*": ["src/app/[lang]/_assets/styles/*"],
+      "@/_components/*": ["src/app/[lang]/_components/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "**/*.css", "**/*.scss"],
