--- a/frontend_new/package.json
+++ b/frontend_new/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.1",
     "@types/qs": "^6.9.10",
+    "html-react-parser": "^5.0.6",
+    "isomorphic-dompurify": "^1.9.0",
     "negotiator": "^0.6.3",
     "next": "14.0.2",
     "qs": "^6.11.2",
