--- a/frontend_new/package.json
+++ b/frontend_new/package.json
@@ -16,6 +16,7 @@
     "isomorphic-dompurify": "^1.9.0",
     "negotiator": "^0.6.3",
     "next": "14.0.2",
+    "next-intl": "^3.1.2",
     "qs": "^6.11.2",
     "react": "^18",
     "react-dom": "^18",
