-18next work upd

--- a/frontend_new/tsconfig.json
+++ b/frontend_new/tsconfig.json
@@ -23,8 +23,10 @@
       "@/*": ["./*"],
       "@/src/*": ["src/*"],
       "@/app/*": ["src/app/[locale]/*"],
-      "@/styles/*": ["src/app/[locale]/_assets/styles/*"],
-      "@/_components/*": ["src/app/[locale]/_components/*"]
+      "@/styles/*": ["src/assets/styles/*"],
+      "@/lib/*": ["src/lib/*"],
+      "@/i18n/*": ["src/i18n/*"],
+      "@/components/*": ["src/components/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "**/*.css", "**/*.scss"],
