--- a/frontend_new/package.json
+++ b/frontend_new/package.json
@@ -13,6 +13,9 @@
     "@types/qs": "^6.9.10",
     "classnames": "^2.3.2",
     "html-react-parser": "^5.0.6",
+    "i18next": "^23.7.6",
+    "i18next-browser-languagedetector": "^7.2.0",
+    "i18next-resources-to-backend": "^1.2.0",
     "isomorphic-dompurify": "^1.9.0",
     "negotiator": "^0.6.3",
     "next": "14.0.2",
@@ -20,6 +23,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-i18next": "^13.5.0",
     "sass": "^1.69.5",
     "server-only": "^0.0.1"
   },
