--- a/frontend_new/package.json
+++ b/frontend_new/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.1",
     "@types/qs": "^6.9.10",
+    "accept-language": "^3.0.18",
     "classnames": "^2.3.2",
     "html-react-parser": "^5.0.6",
     "i18next": "^23.7.6",
