--- a/frontend_new/package.json
+++ b/frontend_new/package.json
@@ -20,6 +20,7 @@
     "isomorphic-dompurify": "^1.9.0",
     "negotiator": "^0.6.3",
     "next": "14.0.2",
+    "nextjs-toploader": "^1.6.4",
     "qs": "^6.11.2",
     "react": "^18",
     "react-dom": "^18",
