--- a/frontend_new/package.json
+++ b/frontend_new/package.json
@@ -12,6 +12,7 @@
     "@formatjs/intl-localematcher": "^0.5.1",
     "@types/qs": "^6.9.10",
     "classnames": "^2.3.2",
+    "framer-motion": "^10.16.5",
     "html-react-parser": "^5.0.6",
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
@@ -22,11 +23,13 @@
     "nextjs-toploader": "^1.6.4",
     "qs": "^6.11.2",
     "react": "^18",
+    "react-aria": "^3.30.0",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-i18next": "^13.5.0",
     "sass": "^1.69.5",
-    "server-only": "^0.0.1"
+    "server-only": "^0.0.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
