--- a/frontend_new/package.json
+++ b/frontend_new/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formatjs/intl-localematcher": "^0.5.1",
+    "@hookform/resolvers": "^3.3.2",
     "@types/qs": "^6.9.10",
     "classnames": "^2.3.2",
     "framer-motion": "^10.16.5",
@@ -29,18 +30,29 @@
     "react-i18next": "^13.5.0",
     "sass": "^1.69.5",
     "server-only": "^0.0.1",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/negotiator": "^0.6.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
+    "@typescript-eslint/parser": "^6.14.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.2",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "postcss": "^8",
+    "prettier": "^3.1.1",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "*"
   }
 }
