--- a/frontend_new/tsconfig.json
+++ b/frontend_new/tsconfig.json
@@ -26,6 +26,8 @@
       "@/styles/*": ["src/assets/styles/*"],
       "@/lib/*": ["src/lib/*"],
       "@/i18n/*": ["src/i18n/*"],
+      "@/views/*": ["src/views/*"],
+      "@/constants/*": ["src/constants/*"],
       "@/components/*": ["src/components/*"]
     }
   },
