--- a/docker-config/Dockerfile.backend
+++ b/docker-config/Dockerfile.backend
@@ -1,4 +1,4 @@
-FROM node:20
+FROM node:20-alpine
 
 # Installing libvips-dev for sharp Compatability
 # RUN apt-get update && apt-get install libvips-dev vim -y
@@ -9,7 +9,7 @@ WORKDIR /app
 COPY package*.json yarn.lock /app/
 # COPY .env /app/
 
-# ENV PATH /app/node_modules/.bin:$PATH
+ENV PATH /app/node_modules/.bin:$PATH
 
 # Install dependencies in /app
 RUN yarn config set network-timeout 600000 -g && yarn install
