--- a/docker-config/docker-compose.yml
+++ b/docker-config/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '1.0'
 
 services:
-  frontend:
-    container_name: frontend
+  frontend_new:
+    container_name: frontend_new
     build:
-      context: ../frontend
+      context: ../frontend_new
       dockerfile: ../docker-config/Dockerfile.frontend
     ports:
       - "3000:3000"
@@ -13,7 +13,7 @@ services:
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
     volumes:
       # Required to sync file changes.
-      - ../frontend:/app
+      - ../frontend_new:/app
       # Required for next to do it's thing.
       - /app/.next
       # Required to not break node modules.
