docker compose update

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,15 +1,13 @@
-.tmp/
-.cache/
-.git/
-build/
-node_modules/
-node_modules
-*backend/node_modules*
-.gitignore
-.next/
+.tmp
+.cache
+.git
+**.gitignore
+.vscode
+**.env
+**/build*
+**/node_modules*
 .dockerignore
-Dockerfile
+**Dockerfile*
 docker-compose.yml
+docker-compose.prod.yml
 nginx/
-node-modules
-node-modules/
