--- a/backend/Dockerfile.prod
+++ b/backend/Dockerfile.prod
@@ -2,6 +2,8 @@
 FROM node:20-alpine as build
 RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev vips-dev git > /dev/null 2>&1
 ENV NODE_ENV=production
+# ARG STRAPI_BACKEND_URL
+# ENV STRAPI_BACKEND_URL ${STRAPI_BACKEND_URL}
 
 WORKDIR /opt/
 COPY package.json yarn.lock ./
