--- a/frontend_new/Dockerfile.prod
+++ b/frontend_new/Dockerfile.prod
@@ -22,16 +22,15 @@ COPY next.config.js .
 COPY tsconfig.json .
 COPY postcss.config.js .
 COPY tailwind.config.ts .
-# COPY ["yarn.lock", "package.json", "./"]
 
 # Environment variables must be present at build time
 # https://github.com/vercel/next.js/discussions/14030
 # ARG ENV_VARIABLE
 # ENV ENV_VARIABLE=${ENV_VARIABLE}
 ARG NEXT_PUBLIC_API_URL
-ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
-ARG NEXT_PUBLIC_STRAPI_URL
-ENV NEXT_PUBLIC_STRAPI_URL=${NEXT_PUBLIC_STRAPI_URL}
+ENV NEXT_PUBLIC_API_URL=http://backend:1337/api
+# ARG NEXT_PUBLIC_STRAPI_URL
+# ENV NEXT_PUBLIC_STRAPI_URL=${NEXT_PUBLIC_STRAPI_URL}
 
 # Next.js collects completely anonymous telemetry data about general usage. Learn more here: https://nextjs.org/telemetry
 # Uncomment the following line to disable telemetry at build time
@@ -71,6 +70,8 @@ COPY --from=builder --chown=nextjs:nodejs /app/.next/static ./.next/static
 # ENV ENV_VARIABLE=${ENV_VARIABLE}
 # ARG NEXT_PUBLIC_ENV_VARIABLE
 # ENV NEXT_PUBLIC_ENV_VARIABLE=${NEXT_PUBLIC_ENV_VARIABLE}
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=http://cx-test.com/strapi/api
 
 # Uncomment the following line to disable telemetry at run time
 # ENV NEXT_TELEMETRY_DISABLED 1
